Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,4 +1,26 @@
 ---
 title: "Introduction"
-description: "Last Updated Feb 25, 2025"
+description: "Last Updated Feb 28, 2025"
 ---
+
+## Tools
+
+<AccordionGroup>
+  <Accordion title="FTC Robot Controller" defaultOpen={false}>
+    The [FTC Robot Controller](https://github.com/FIRST-Tech-Challenge/FtcRobotController) is the software that runs on a [REV Control Hub](https://www.revrobotics.com/rev-31-1595/) or FTC Robot Controller App. By adding TeleOp or Autonomous "OpModes", software allows FTC Robots to do various player-controller or autonomous functions.
+  </Accordion>
+
+  <Accordion title="Android Studio" defaultOpen={false}>
+    [Android Studio](https://developer.android.com/studio) is a version of [IntelliJ](https://www.jetbrains.com/idea/) by [Jetbrains](https://www.jetbrains.com) designed for creating Android Apps, and is also the preferred IDE for FTC programming.
+  </Accordion>
+
+  <Accordion title="Gradle" defaultOpen={false}>
+    [Gradle](https://gradle.org/) is a &#x20;
+  </Accordion>
+</AccordionGroup>
+
+## What is Auton-First for FTC?
+
+Auton-First is the development of robotics code that focuses on enabling easy Autonomous period design. Since Autonomous period is often seen as more complex than TeleOP, designing with it in mind provides many benefits.
+
+##
