Documentation edits made through Mintlify web editor

--- a/installation.mdx
+++ b/installation.mdx
@@ -35,7 +35,7 @@ description: "Last Updated Feb 28, 2025"
 
     5. If prompted, press "Trust Project"
 
-    6. Go to Settings, "Build, Execution, Development", "Build Tools", "Gradle" and change the Gradle JDK to Java 17
+    6. Go to Settings, "Build, Execution, Development", "Build Tools", "Gradle" and change the Gradle JDK to Java 17; press "OK" to confirm
 
            <Note>
              If needed, install Java 17 by pressing "Download JDK" and selecting Version 17
@@ -44,7 +44,20 @@ description: "Last Updated Feb 28, 2025"
            </Note>
 
        ![](/images/change_jdk.png)
+  </Tab>
 
-    7. SS
+  <Tab title="ADB WiFi">
+    ## ADB WiFi
+
+    1. Go to Settings, "Plugins" and search "ADB Wi-Fi" and Install. Once completed, press "OK"
+
+       ![](/images/adb_wifi.png)
+
+    2. To use ADB WiFi, connect to the robot's WiFi network before selecting the WiFi icon on the right bar and selecting connect to the Robot Controller&#x20;
+       ![](/images/adb_wifi_use.png)
+
+        <Note>
+          Sometimes, you may need to plug in your computer to the Robot Controller before the device can be connected to via WiFi. Additionally, you may also have to do the first install each time you open the app on another WiFi network to download necessary imports and libraries.
+        </Note>
   </Tab>
 </Tabs>
