--- a/introduction.mdx
+++ b/introduction.mdx
@@ -15,7 +15,11 @@ description: "Last Updated Feb 28, 2025"
   </Accordion>
 
   <Accordion title="Gradle" defaultOpen={false}>
-    [Gradle](https://gradle.org/) is a &#x20;
+    [Gradle](https://gradle.org/) is a build automation tool that is used to build and launch the FTC RC to the Robot Controller. Currently, the FTC RC uses Gradle 7.2.0. This means that the Java version needs to be set to Java 17. However, FTC does plan to upgrade to a higher version of Gradle soon.
+  </Accordion>
+
+  <Accordion title="ADB WiFi" defaultOpen={false}>
+    ADB WiFi is a Android Studio plugin that allows users to boot programs to devices over WiFi. This makes booting code onto the robot much easier, but is still a bit finicky.
   </Accordion>
 </AccordionGroup>
 
