Documentation edits made through Mintlify web editor

--- a/installation.mdx
+++ b/installation.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Installation and Quickstart"
 description: "Last Updated Feb 28, 2025"
+mode: "wide"
+previous: "/introduction.mdx"
 ---
 
 <Tabs>
