Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -19,7 +19,7 @@ description: "Last Updated Feb 28, 2025"
   </Accordion>
 
   <Accordion title="ADB WiFi" defaultOpen={false}>
-    ADB WiFi is a Android Studio plugin that allows users to boot programs to devices over WiFi. This makes booting code onto the robot much easier, but is still a bit finicky.
+    [ADB WiFi](/mdssrobotics/mdssrobotics/editor/main#adb-wifi) is a Android Studio plugin that allows users to boot programs to devices over WiFi. This makes booting code onto the robot much easier, but is still a bit finicky.
   </Accordion>
 </AccordionGroup>
 
