--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Introduction"
-description: "Last Updated Feb 28, 2025"
+description: "Coding for First Technology Challenge Robots"
 ---
 
 ## Tools
