Documentation edits made through Mintlify web editor

--- a/installation.mdx
+++ b/installation.mdx
@@ -60,12 +60,13 @@ mode: "wide"
   <Tab title="ADB WiFi">
     ## <span id="adb_wifi">ADB WiFi</span>
 
+    ADB WiFi is a extension that allows you to connect to the Robot Control Hub over WiFi.
+
     1. Go to Settings, "Plugins" and search "ADB Wi-Fi" and Install. Once completed, press "OK"
 
        ![](/images/adb_wifi.png)
 
     2. To use ADB WiFi, connect to the robot's WiFi network before selecting the WiFi icon on the right bar and selecting connect to the Robot Controller&#x20;
-
 
        ![](/images/adb_wifi_use.png)
 
@@ -74,5 +75,9 @@ mode: "wide"
            </Note>
   </Tab>
 
-  <Tab title="Roadrunner" />
+  <Tab title="Roadrunner">
+    ## Roadrunner
+
+    Roadrunner is a robot localization, path following, and action library designed for Autonomous period robot control.
+  </Tab>
 </Tabs>
