--- a/introduction.mdx
+++ b/introduction.mdx
@@ -26,3 +26,7 @@ description: "Coding for First Technology Challenge Robots"
 ## What is Auton-First for FTC?
 
 Auton-First is the development of robotics code that focuses on enabling easy Autonomous period design. Since Autonomous period is often seen as more complex than TeleOP, designing with it in mind provides many benefits.
+
+## Roadrunner
+
+[Roadrunner](https://rr.brott.dev/docs) is a library designed to enable robot localization, path following, and autonomous actions for FTC robots. Since this guide prioritizes designing for the Autonomous period over TeleOP
