Documentation edits made through Mintlify web editor

--- a/setup.mdx
+++ b/setup.mdx
@@ -38,7 +38,11 @@ Generally, you only edit the `build.grade` in `(Module :TeamCode)`.
   </Accordion>
 </AccordionGroup>
 
-## Folder
+Once you are done editing Gradle files, select "Sync Now" to update the Gradle configuration.
+
+![](/images/update_gradle.png)
+
+## OpModes Folder
 
 ![](/images/android_workspace.png)
 
