--- a/structure.mdx
+++ b/structure.mdx
@@ -5,7 +5,7 @@ description: "How to structure the opmode folder"
 
 ## Simple
 
-The easiest way to set up a robot is with two files for opmodes, one for the autonomous period and the other for teleOP. Generally, the autonomous opmode will be a `LinearOpMode` due to actions being performed only once, but the teleOP period is more flexible. Generally, an Iterative Opmode is easier to use but many guides (like [Game Manual 0](https://gm0.org)) prefer to use `LinearOpMode` .
+The easiest way to set up a robot is with two files for opmodes, one for the autonomous period and the other for teleOP. Generally, the autonomous opmode will be a `LinearOpMode` due to actions being performed only once, but the teleOP period is more flexible. Generally, an Iterative Opmode is easier to use but many guides (like [Game Manual 0](https://gm0.org)) prefer to use `LinearOpMode` .  
 
 <CodeGroup>
 
@@ -38,7 +38,7 @@ Generally, most robot components (ie. Motors, Servos) are defined outside of fun
 
 ```java TeleOP.java
 public class TeleOP extends OpMode {
-	public static DcMotor motor;
+	private static DcMotor motor;
 
 	@Override
 	public void init() {
@@ -63,4 +63,80 @@ public class Auton extends LinearOpMode {
 
 </CodeGroup>
 
-Opm
+If a lot of components are shared in both opmodes, redefining them in both can be tedious and add unneccesary complexity to programs. A solution is creating a common or configuration file to share all duplicate code. 
+
+For example,
+
+<CodeGroup>
+
+```java TeleOP.java
+public class TeleOP extends OpMode {
+    private static DcMotor frontLeft;
+    private static DcMotor backLeft;
+    private static DcMotor frontRight;
+    private static DcMotor backRight;
+	private static DcMotor teleMotor;
+
+    @Override
+    public void init() {
+        frontLeft = hardwareMap.get(DcMotor.class, "frontLeft");
+        backLeft = hardwareMap.get(DcMotor.class, "backLeft");
+        frontRight = hardwareMap.get(DcMotor.class, "frontRight");
+        backRight = hardwareMap.get(DcMotor.class, "backRight");
+		teleMotor = hardwareMap.get(DcMotor.class, "teleMotor");
+    }
+
+	@Override
+	public void run()
+}
+```
+
+
+```java Auton.java
+public class Auton extends LinearOpMode {
+    private static DcMotor frontLeft;
+    private static DcMotor backLeft;
+    private static DcMotor frontRight;
+    private static DcMotor backRight;
+	private static DcMotor autonMotor;
+
+	@Override
+	public void runOpMode() {
+        frontLeft = hardwareMap.get(DcMotor.class, "frontLeft");
+        backLeft = hardwareMap.get(DcMotor.class, "backLeft");
+        frontRight = hardwareMap.get(DcMotor.class, "frontRight");
+        backRight = hardwareMap.get(DcMotor.class, "backRight");
+		autonMotor = hardwareMap.get(DcMotor.class, "autonMotor");
+
+		waitForStart();
+	}
+}
+```
+
+</CodeGroup>
+
+can be converted to
+
+<CodeGroup>
+
+```java Common.java
+public class Common {
+    public static DcMotor frontLeft;
+    public static DcMotor backLeft;
+    public static DcMotor frontRight;
+    public static DcMotor backRight;
+
+
+
+	public static initialize(HardwareMap hardwareMap) {
+        frontLeft = hardwareMap.get(DcMotor.class, "frontLeft");
+        backLeft = hardwareMap.get(DcMotor.class, "backLeft");
+        frontRight = hardwareMap.get(DcMotor.class, "frontRight");
+        backRight = hardwareMap.get(DcMotor.class, "backRight");
+	}
+}
+```
+
+</CodeGroup>
+
+ 
