--- a/structure.mdx
+++ b/structure.mdx
@@ -5,7 +5,7 @@ description: "How to structure the opmode folder"
 
 ## Simple
 
-The easiest way to set up a robot is with two files for opmodes, one for the autonomous period and the other for teleOP. Generally, the autonomous opmode will be a `LinearOpMode` due to actions being performed only once, but the teleOP period is more flexible. Generally, an Iterative Opmode is easier to use but many guides (like [Game Manual 0](https://gm0.org)) prefer to use `LinearOpMode` .  
+The easiest way to set up a robot is with two files for opmodes, one for the autonomous period and the other for teleOP. Generally, the autonomous opmode will be a `LinearOpMode` due to actions being performed only once, but the teleOP period is more flexible. Generally, an Iterative Opmode is easier to use but many guides (like [Game Manual 0](https://gm0.org)) prefer to use `LinearOpMode` .
 
 <CodeGroup>
 
@@ -38,7 +38,7 @@ Generally, most robot components (ie. Motors, Servos) are defined outside of fun
 
 ```java TeleOP.java
 public class TeleOP extends OpMode {
-	private static DcMotor motor;
+	private DcMotor motor;
 
 	@Override
 	public void init() {
@@ -63,7 +63,7 @@ public class Auton extends LinearOpMode {
 
 </CodeGroup>
 
-If a lot of components are shared in both opmodes, redefining them in both can be tedious and add unneccesary complexity to programs. A solution is creating a common or configuration file to share all duplicate code. 
+If a lot of components are shared in both opmodes, redefining them in both can be tedious and add unneccesary complexity to programs. A solution is creating a common or configuration file to share all duplicate code.
 
 For example,
 
@@ -71,11 +71,11 @@ For example,
 
 ```java TeleOP.java
 public class TeleOP extends OpMode {
-    private static DcMotor frontLeft;
-    private static DcMotor backLeft;
-    private static DcMotor frontRight;
-    private static DcMotor backRight;
-	private static DcMotor teleMotor;
+    private DcMotor frontLeft;
+    private DcMotor backLeft;
+    private DcMotor frontRight;
+    private DcMotor backRight;
+	private DcMotor teleMotor;
 
     @Override
     public void init() {
@@ -87,18 +87,21 @@ public class TeleOP extends OpMode {
     }
 
 	@Override
-	public void run()
+	public void start() {
+		frontLeft.setPower(0.8);
+		teleMotor.setPower(0.4);
+	}
 }
 ```
 
 
 ```java Auton.java
 public class Auton extends LinearOpMode {
-    private static DcMotor frontLeft;
-    private static DcMotor backLeft;
-    private static DcMotor frontRight;
-    private static DcMotor backRight;
-	private static DcMotor autonMotor;
+    private DcMotor frontLeft;
+    private DcMotor backLeft;
+    private DcMotor frontRight;
+    private DcMotor backRight;
+	private DcMotor autonMotor;
 
 	@Override
 	public void runOpMode() {
@@ -109,6 +112,9 @@ public class Auton extends LinearOpMode {
 		autonMotor = hardwareMap.get(DcMotor.class, "autonMotor");
 
 		waitForStart();
+
+		frontLeft.setPower(0.5);
+		autonMotor.setPower(0.9);
 	}
 }
 ```
@@ -126,8 +132,6 @@ public class Common {
     public static DcMotor frontRight;
     public static DcMotor backRight;
 
-
-
 	public static initialize(HardwareMap hardwareMap) {
         frontLeft = hardwareMap.get(DcMotor.class, "frontLeft");
         backLeft = hardwareMap.get(DcMotor.class, "backLeft");
@@ -137,6 +141,55 @@ public class Common {
 }
 ```
 
-</CodeGroup>
 
- 
+```java TeleOP.java
+package org.firstinspires.ftc.teamcode;
+
+import org.firstinspires.ftc.teamcode.Config;
+// other imports
+
+public class TeleOP extends OpMode {
+    private DcMotor frontLeft;
+    private DcMotor backLeft;
+    private DcMotor frontRight;
+    private DcMotor backRight;
+	private DcMotor teleMotor;
+
+    @Override
+    public void init() {
+        Common.initialize(hardwareMap);
+		teleMotor = hardwareMap.get(DcMotor.class, "teleMotor");
+    }
+
+	@Override
+	public void start() {
+		Common.frontLeft.setPower(0.8);
+		teleMotor.setPower(0.4);
+	}
+}
+```
+
+
+```java Auton.java
+package org.firstinspires.ftc.teamcode;
+
+import org.firstinspires.ftc.teamcode.Config;
+// other imports
+
+public class Auton extends LinearOpMode {
+	private static DcMotor autonMotor;
+
+	@Override
+	public void runOpMode() {
+        Common.initialize(hardwareMap);
+		autonMotor = hardwareMap.get(DcMotor.class, "autonMotor");
+
+		waitForStart();
+
+		Common.frontLeft.setPower(0.5);
+		autonMotor.setPower(0.9);
+	}
+}
+```
+
+</CodeGroup>
