--- a/practices.mdx
+++ b/practices.mdx
@@ -27,6 +27,20 @@ comment
 Javadoc is a tool that enables automatic documentation generation and is attached to files and methods. It uses special [tags](https://www.oracle.com/ca-en/technical-resources/articles/java/javadoc-tool.html) and HTML to format, so links can also be embedded.
 
 ```java
+/**
+Example method that shifts all characters in a string by a certain amount
+@param a amount to shift string by
+@param b string to shift
+@return shifted string
+**/
+private static String example(int a, String b) {
+	String res = "";
+	for (char c : b.toCharArray()) res += (char)(c + a);
+	return res;
+}
+```
+
+```java
 package org.firstinspires.ftc.teamcode;
 
 import com.qualcomm.robotcore.eventloop.opmode.TeleOp;
@@ -55,4 +69,4 @@ public class Common {
 }
 ```
 
-### S
+## Timing
