Documentation edits made through Mintlify web editor

--- a/structure.mdx
+++ b/structure.mdx
@@ -237,3 +237,5 @@ public class BlueLeft extends AutonTemplate {
 	}
 }
 ```
+
+To learn more about Object-Oriented Programming, look [here](https://www.w3schools.com/java/java_oop.asp) or [here](https://docs.oracle.com/javase/tutorial/java/concepts/).
