Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -6,19 +6,16 @@ description: "Coding for First Technology Challenge Robots"
 ## Tools
 
 <AccordionGroup>
-  <Accordion title="FTC Robot Controller" defaultOpen={false}>
+  <Accordion title="FTC Robot Controller" defaultOpen="false">
     The [FTC Robot Controller](https://github.com/FIRST-Tech-Challenge/FtcRobotController) is the software that runs on a [REV Control Hub](https://www.revrobotics.com/rev-31-1595/) or FTC Robot Controller App. By adding TeleOp or Autonomous "OpModes", software allows FTC Robots to do various player-controller or autonomous functions.
   </Accordion>
-
-  <Accordion title="Android Studio" defaultOpen={false}>
+  <Accordion title="Android Studio" defaultOpen="false">
     [Android Studio](https://developer.android.com/studio) is a version of [IntelliJ](https://www.jetbrains.com/idea/) by [Jetbrains](https://www.jetbrains.com) designed for creating Android Apps, and is also the preferred IDE for FTC programming.
   </Accordion>
-
-  <Accordion title="Gradle" defaultOpen={false}>
+  <Accordion title="Gradle" defaultOpen="false">
     [Gradle](https://gradle.org/) is a build automation tool that is used to build and launch the FTC RC to the Robot Controller. Currently, the FTC RC uses Gradle 7.2.0. This means that the Java version needs to be set to Java 17. However, FTC does plan to upgrade to a higher version of Gradle soon.
   </Accordion>
-
-  <Accordion title="ADB WiFi" defaultOpen={false}>
+  <Accordion title="ADB WiFi" defaultOpen="false">
     [ADB WiFi](/mdssrobotics/mdssrobotics/editor/main#adb-wifi) is a Android Studio plugin that allows users to boot programs to devices over WiFi. This makes booting code onto the robot much easier, but is still a bit finicky.
   </Accordion>
 </AccordionGroup>
