--- a/utility_components/utility.mdx
+++ b/utility_components/utility.mdx
@@ -7,4 +7,8 @@ description: "Supporting components not directly used for robot functionality"
 
 While creating utility classes with a small codebase is often unnecessary, as FTC code often resuses similar resources and can grow over a long time, it is often convienent to create some ready-made utility classes to simplify work.
 
-In addition to providing pre-built functionality, 
+In addition to providing pre-built functionality, utility classes can also greatly reduce the number duplicated code fragments and make large files more readable.
+
+## What should I make a utility class?
+
+In this guide, a few example utility classes are shown, Gamepads and Motor Groups. These things are often used as supporting functionality, but are not actual components directly used by the robot.
