Documentation edits made through Mintlify web editor

--- a/utility_components/gamepad.mdx
+++ b/utility_components/gamepad.mdx
@@ -77,5 +77,5 @@ public float[] getSquaredStickInputs() {
 }
 ```
 
-<img className="block h-32 dark:hidden" src="/images/light_curve.png" />
-<img className="hidden h-32 dark:block" src="/images/dark_curve.png" />
+<img className="block dark:hidden" src="/images/light_curve.png" />
+<img className="hidden dark:block" src="/images/dark_curve.png" />
