Documentation edits made through Mintlify web editor

--- a/utility_components/gamepad.mdx
+++ b/utility_components/gamepad.mdx
@@ -35,6 +35,8 @@ package org.firstinspires.ftc.teamcode.opmodes;
 import org.firstinspires.ftc.teamcode.utility.GamepadEx;
 
 public class ExampleOpMode extends LinearOpMode {
+
+	@Override
 	public void runOpMode() {
 		GamepadEx gamepad_left = new GamepadEx(gamepad1);
 		DcMotor example_motors[] = new DcMotor[8];
