--- a/utility_components/camera.mdx
+++ b/utility_components/camera.mdx
@@ -13,9 +13,13 @@ To connect a webcam to the robot, follow [this tutorial](https://ftc-docs.firsti
 
 Recently, the FTC Robot Controller has incorporated the FTC VisionPortal, which combines functionality from older [EasyOpenCV](https://github.com/OpenFTC/EasyOpenCV) and AprilTag libaries.
 
+<Tip>
+  Sometimes, it can be helpful to debug camera information and improve performance. For more information, click [here](https://ftc-docs.firstinspires.org/en/latest/apriltag/vision_portal/visionportal_cpu_and_bandwidth/visionportal-cpu-and-bandwidth.html)
+</Tip>
+
 ### EasyOpenCV
 
-**EasyOpenCV** is a vision tool that utilizes [OpenCV](https://opencv.org) to detect various phenomena from camera vision. For example, in FTC 2022-23 Season [Powerplay](https://www.youtube.com/watch?v=HsitvZ0JaDc), three sides of a cone needed to be recognized in order to choose where the robot needed to park. 
+**EasyOpenCV** is a vision tool that utilizes [OpenCV](https://opencv.org) to detect various phenomena from camera vision. For example, in FTC 2022-23 Season [Powerplay](https://www.youtube.com/watch?v=HsitvZ0JaDc), three sides of a cone needed to be recognized in order to choose where the robot needed to park.
 
 Many teams used a three coloured cones as below, and used EasyOpenCV to recognize them.
 
@@ -23,8 +27,96 @@ Many teams used a three coloured cones as below, and used EasyOpenCV to recogniz
 
 While VisionPortal was not in the FTC Robot Controller during this season, similar functionality could be created using the library.
 
-For example
+For example, the following snippet highlights how an opmode could detect what colour is in a specific zone using `org.firstinspires.ftc.vision.opencv.PredominantColorProcessor`
+
+```java
+public class VisionPortalColorSense extends LinearOpMode {
+    @Override
+    public void runOpMode() {
+		PredominantColorProcessor colorSensor = new PredominantColorProcessor.Builder()
+			.setRoi(ImageRegion.asUnityCenterCoordinates(-0.1, 0.1, 0.1, -0.1))
+			.setSwatches(
+				PredominantColorProcessor.Swatch.CYAN,
+				PredominantColorProcessor.Swatch.YELLOW,
+				PredominantColorProcessor.Swatch.MAGENTA
+			)
+			.build();
+		VisionPortal portal = new VisionPortal.Builder()
+                .addProcessor(colorSensor)
+                .setCameraResolution(new Size(320, 240))
+                .setCamera(hardwareMap.get(WebcamName.class, "Webcam 1"))
+                .build();
+
+		waitForStart();
+
+		while (opModeIsActive()) {
+			PredominantColorProcessor.Result result = colorSensor.getAnalysis();
+			telemetry.addData("Best Match:", result.closestSwatch);
+            telemetry.addLine(String.format("R %3d\n G %3d\n, B %3d\n", Color.red(result.rgb), Color.green(result.rgb), Color.blue(result.rgb)));
+            telemetry.update();
+
+			sleep(20);
+		}
+	}
+}
+```
+
+`PredominantColorProcessor`  provides many ready colours, which are [labelled](https://javadoc.io/doc/org.firstinspires.ftc/Vision/10.1.1/org/firstinspires/ftc/vision/opencv/PredominantColorProcessor.Swatch.html) under `PredominantColorProcessor.Swatch`
+
+For more information about this premade processor, visit [here](https://ftc-docs.firstinspires.org/en/latest/color_processing/color-sensor/color-sensor.html).
+
+### April Tags
+
+April Tags are also commonly seen in FTC, and generally placed on walls as navigation markers. The VisionPortal has built in April Tag detection utility, which also includes the ability to approximately localize a robot with April Tags.
+
+```java
+public class VisionPortalAprilTagLocalization extends LinearOpMode {
+	private Position cameraPosition = new Position(DistanceUnit.INCH, 0, 0, 0, 0);
+    private YawPitchRollAngles cameraOrientation = new YawPitchRollAngles(AngleUnit.DEGREES, 0, -90, 0, 0);
+	
+	private AprilTagProcessor aprilTag;
+	private VisionPortal visionPortal;
+
+	@Override
+	public void runOpMode() {
+		aprilTag = new AprilTagProcessor.Builder()
+                .setCameraPose(cameraPosition, cameraOrientation)
+                .build();
+
+        VisionPortal.Builder builder = new VisionPortal.Builder();
+        builder.setCamera(hardwareMap.get(WebcamName.class, "Webcam 1"));
+        builder.addProcessor(aprilTag);
+        visionPortal = builder.build();
+
+		waitForStart();
+
+        while (opModeIsActive()) {
+			List<AprilTagDetection> currentDetections = aprilTag.getDetections();
+        	telemetry.addData("# AprilTags Detected", currentDetections.size());
+
+        	for (AprilTagDetection detection : currentDetections) {
+            	if (detection.metadata != null) {
+                	telemetry.addLine(String.format("\n---> (ID %d) %s", detection.id, detection.metadata.name));
+                	telemetry.addLine(String.format("X %6.1f\n Y %6.1f\nZ %6.1f  (in)",
+                        detection.robotPose.getPosition().x,
+                        detection.robotPose.getPosition().y,
+                        detection.robotPose.getPosition().z));
+                	telemetry.addLine(String.format("Pitch %6.1f\n Roll %6.1f\n Yaw %6.1f (deg)",
+					detection.robotPose.getOrientation().getPitch(AngleUnit.DEGREES),
+detection.robotPose.getOrientation().getRoll(AngleUnit.DEGREES),
+detection.robotPose.getOrientation().getYaw(AngleUnit.DEGREES)));
+            	} else {
+                	telemetry.addLine(String.format("\n---> (ID %d) Unknown", detection.id));
+                	telemetry.addLine(String.format("Center %6.0f %6.0f   (px)", detection.center.x, detection.center.y));
+            	}
+        	}
+		}
+	}
+}
+```
 
 ## More CV Resources
 
-The official documentation for the FTC Robot Controller Vision Portal can be found [here](https://ftc-docs.firstinspires.org/en/latest/apriltag/vision_portal/visionportal_overview/visionportal-overview.html).
+The official documentation for the FTC Robot Controller Vision Portal can be found [here](https://javadoc.io/doc/org.firstinspires.ftc/Vision/latest/org/firstinspires/ftc/vision/VisionPortal.html) and on the wiki [here](https://ftc-docs.firstinspires.org/en/latest/apriltag/vision_portal/visionportal_overview/visionportal-overview.html).
+
+Examples of various vision processing and the VisionPortal can be found [here](https://github.com/FIRST-Tech-Challenge/FtcRobotController/blob/master/FtcRobotController/src/main/java/org/firstinspires/ftc/robotcontroller/external/samples).
